--- a/src/dynamic/edit.ejs
+++ b/src/dynamic/edit.ejs
@@ -45,6 +45,7 @@
           <a href="/join" target="_blank">Join Server</a><br />
           <a href="/add">Add bot</a><br />
           <a href="/api/theme">Toggle Theme</a><br />
+          <a href="/about">About</a><br />
           <a href="/logout">Logout</a>
         </span>
         </span>
