--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -474,6 +474,12 @@ hr {
     border-radius: 50px;
 }
 
+.smallwidth {
+    text-align: justify;
+    width: 70%;
+    margin: auto;
+}
+
 @media only screen and (max-width: 900px) {
     .half-left {
         margin-left: 0;
@@ -489,6 +495,10 @@ hr {
 
     .half:hover:after {
         width: 150%
+    }
+
+    .smallwidth {
+        width: 85%;
     }
 }
 
