Add support for HTML long descriptions and use ckeditor4

--- a/src/dynamic/edit.ejs
+++ b/src/dynamic/edit.ejs
@@ -15,6 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css" rel="stylesheet">
 
+    <script src="//cdn.ckeditor.com/4.14.1/standard/ckeditor.js"></script>
+
     <link href="/assets/css/main.css" rel="stylesheet">
     <link href="/theme" rel="stylesheet">
     
@@ -80,7 +82,7 @@
             <br>
             <div class="input-holder">
                 <textarea class="input" id="longdesc" rows="7"><%= bot.long %></textarea>
-                <div class="textarea-placeholder">Long Description - Supports <a href="https://guides.github.com/features/mastering-markdown/">Markdown</a></div>
+                <div class="textarea-placeholder">Long Description</div>
             </div>
             <br>
             <div class="input-holder">
