Fix login in navbar

--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -12,6 +12,7 @@ head
     link(href='/assets/css/main.css' rel='stylesheet')
     link(href='/theme' rel='stylesheet')
     
+    script(src='https://cdn.ckeditor.com/4.14.1/standard/ckeditor.js')
     script(src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js')
     script(src='/assets/js/main.js')
     script(src='/assets/js/script.js')
