--- a/src/dynamic/includes/nav.pug
+++ b/src/dynamic/includes/nav.pug
@@ -11,21 +11,24 @@
                 include arrow.pug
                 a(href=`/api/embed/${bot.botid}` target="_blank")
                     span.navtext Embed
-            if (cards)
+            if (cards && user)
                 a(href=`/user/${user.id}`)
                     span.navtext #{user.username}
     a#searcher.navtag.search(href='/bots/search/')
         img#searchimg(src='/assets/img/search.png' width='26px' height='26px')
         #search.navtext Search
     span.dropdown
-        a#login.navtag(href='/login') Login
-        span.dd-content
-            a(href='/join' target='_blank') Join Server
-            br
-            a(href='/add') Add bot
-            br
-            a(href='/api/theme') Toggle Theme
-            br
-            a(href='/about') About
-            br
-            a(href='/logout') Logout
+        if (user)
+            a#login.navtag(href='/login') #{user.username}##{user.discriminator}
+            span.dd-content
+                a(href='/join' target='_blank') Join Server
+                br
+                a(href='/add') Add bot
+                br
+                a(href='/api/theme') Toggle Theme
+                br
+                a(href='/about') About
+                br
+                a(href='/logout') Logout
+        else
+            a#login.navtag(href='/login') Login
