Fix search page

--- a/src/dynamic/search.pug
+++ b/src/dynamic/search.pug
@@ -12,6 +12,15 @@ body
             input#searchbar.input(type='text' placeholder=' ')
             .placeholder Search
         #cards
+            if (cards.length == 0)
+                p No bots found. Try searching for something else.
+            else
+                each card in cards
+                    div.card
+                        img.icon(src=card.logo)
+                        h2.title #{card.username}
+                        p.desc #{card.description}
+                        a.small.button(href=`/bots/${card.botid}`) View bot info
     script.
         const node = document.getElementById("searchbar");
         node.addEventListener("keyup", function(event) {
