--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -15,6 +15,6 @@ head
     script(src='https://cdn.ckeditor.com/4.14.1/standard/ckeditor.js')
     script(src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js')
     script(src='/assets/js/main.js')
-    script(src='/assets/js/script.js')
+    script(src='/assets/js/cards.js')
     
     title Discord Bots
