Use noty for error messages

--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -19,7 +19,7 @@ body
       br
       .input-holder
         input#description.input(maxlength='120' type='text' placeholder=' ' value=bot.description)
-        .placeholder Short Description
+        .placeholder Summary
       br
       .input-holder
         input#invite.input(type='text' placeholder=' ' value=bot.invite)
@@ -27,7 +27,7 @@ body
       br
       .input-holder
         textarea#longdesc.input(rows='7')
-        .textarea-placeholder Long Description
+        .textarea-placeholder Description
       br
       .input-holder
         input#owners.input.xinput(type='text' placeholder=' ' value=bot.additional)
