--- a/src/dynamic/resubmit.pug
+++ b/src/dynamic/resubmit.pug
@@ -19,7 +19,7 @@ body
         br
         .input-holder
           input#short.input(maxlength='120' type='text' placeholder=' ' value=bot.description)
-          .placeholder Short Description
+          .placeholder Summary
         br
         .input-holder
           input#invite.input(type='text' placeholder=' ' value=bot.invite)
@@ -28,7 +28,7 @@ body
         .input-holder
           textarea#longdesc.input(rows='7')
           .textarea-placeholder
-            | Long Description
+            | Description
         br
         .input-holder
           input#owners.input.xinput(type='text' placeholder=' ' value=bot.additional)
