Cleanup frontend and routes

--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -26,7 +26,7 @@ body(onload="load()")
           .placeholder Custom Invite
         br
         .input-holder
-          textarea#longdesc.input(rows='7')
+          textarea#longdesc.input(rows='7') #{bot.long}
           .textarea-placeholder Description
         br
         .input-holder
