Fix owners being buggy and cleanup frontend

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -1,6 +1,6 @@
 doctype html
 include includes/head.pug
-script(src='/assets/js/add.js')
+script(src='/assets/js/form.js')
 body
     include includes/nav.pug
     #content
