--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -201,16 +201,10 @@ h2 {
     margin: -70px 15px 15px 15px;
 }
 
-#by {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 50px;
-    margin: 15px;
-    background-color: var(--background-2);
-    height: 30px;
+#owners {
+    width:100%;
+    display: flex;
+    justify-content: center;
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
@@ -218,9 +212,19 @@ h2 {
     -o-user-select: none;
 }
 
-#by img {
+.owner {
+    display: inline-block;
+    height: 30px;
+    padding: 5px 10px;
+    border-radius: 50px;
+    margin: 15px;
+    background-color: var(--background-2);
+}
+
+.owner img {
     border-radius: 50%;
     font-size: 20px;
+    margin-right: 5px;
 }
 
 .right {
