--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -26,5 +26,11 @@ head
 
     script(src='/assets/js/main.js')
     script(src='/assets/js/cards.js')
+
+    //- Import SWAL
+    if (isBotEditPage)
+        script(src='https://cdn.jsdelivr.net/npm/sweetalert2@9')
+        link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
+
     
     title Discord Bots
