--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -5,7 +5,7 @@ body
     #content
         img#bot-icon(width='180px' height='180px' style=`border: 3px solid ${bcolour}` src=bot.logo)
         h2.right #{bot.username}
-        span.right #{bot.servers ? bot.servers + " servers" : ""}
+        .right #{servers ? `${servers} servers` : ""}
         .right(style='margin-top: 20px;') #{bot.description}
         .right(style='margin-top: 10px;')
             strong Prefix: 
