--- a/src/dynamic/theme/dark.css
+++ b/src/dynamic/theme/dark.css
@@ -1,6 +1,7 @@
 :root {
-    --background-color: #2C2F33;
-    --color: #FFFFFF;
-    --title-text: #7289DA;
-    --background-2: #23272A;
+    --background-color: #404E5C;
+    --background-2: #4F6272;
+    --color: #DCE2F9;
+    --primary: #7EE081;
+    --secondary: #DE9151;
 }
