--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -3,17 +3,33 @@ include includes/head.pug
 body
     include includes/nav.pug
     #content
-        img#bot-icon(width='180px' height='180px' style=`border: 3px solid ${bcolour}` src=bot.logo)
-        h2.right #{bot.username}
-        .right #{servers ? `${servers} servers` : ""}
-        .right(style='margin-top: 20px;') #{bot.description}
-        .right(style='margin-top: 10px;')
-            strong Prefix: 
-            code#prefix #{bot.prefix}
-        .right(style='margin-top: 20px;')
+        img#bot-icon(width='180px' height='180px' src=bot.logo)
+        h2.right(style='display: inline;') #{bot.username}
+        if (servers)
+            .right.servers #{`${servers} servers`}
+        case botUser.presence.status
+            when "online"
+                .sts.online
+                    i.fas.fa-circle
+                    span #{activity ? activity : "Online"}
+            when "idle"
+                .sts.idle
+                    i.fas.fa-circle
+                    span #{activity ? activity : "Idle"}
+            when "dnd"
+                .sts.dnd
+                    i.fas.fa-circle
+                    span #{activity ? activity : "Dnd"}
+            default
+                .sts.offline
+                    i.fas.fa-circle
+                    span Offline
+        .right.summary(style='margin-top: 10px;') #{bot.description}
+        .right.buttons-case(style='margin-top: 20px;')
             a.bot-btns.button(target='_blank' href=bot.invite ? bot.invite : `https://discord.com/oauth2/authorize?client_id=${bot.botid}&scope=bot&permissions=0`)
                 | Invite
             a.bot-btns.button(target='_blank' href=`/api/embed/${bot.botid}`) Embed
+        
         #long
             span.isURL(class=isURL ? '' : 'markdown-body ') !{desc}
         #edit.linkx(style='display: none;')
