--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -24,6 +24,9 @@ head
     script(src='https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css' rel='stylesheet')
 
+    //- FontAwesome
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css' rel='stylesheet')
+
     script(src='/assets/js/main.js')
     script(src='/assets/js/cards.js')
 
