--- a/src/dynamic/user/index.pug
+++ b/src/dynamic/user/index.pug
@@ -4,7 +4,7 @@ body
   include ../includes/nav.pug
   #content
     span.header
-        h1 #{user.username}
+        h1 #{userProfile.username}
         .badge-holder
             if (admin)
                 span.badge
