--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -31,10 +31,10 @@ body(onload="load()")
         br
         .input-holder
           if (bot.owners[0] == user.id)
-            input#owners.input.xinput(type='text' placeholder=' ' value=bot.owners.slice(1).join(" "))
+            input#owners.input.xinput(type='text' placeholder=' ' value=String(bot.owners.slice(1).join(" ")))
             .placeholder Additional Owner IDs
           else
-            input#owners.input.xinput(type='text' placeholder=' ' value=bot.owners.slice(1).join(" ") disabled)
+            input#owners.input.xinput(type='text' placeholder=' ' value=String(bot.owners.slice(1).join(" ")) disabled)
             .placeholder Only the primary owner can edit additional owners
         br
         a.button(onclick='submit()') Submit
