--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -200,6 +200,7 @@ h2 {
 
 #long {
   background-color: var(--background-2);
+  word-wrap: break-word;
   padding: 1px 15px;
   margin: 60px 50px 15px;
 }
