Add avatar to user profile page

--- a/src/dynamic/user/index.pug
+++ b/src/dynamic/user/index.pug
@@ -4,6 +4,7 @@ body
   include ../includes/nav.pug
   #content
     span.header
+        img.icon(src=userProfile.displayAvatarURL() width="100px")
         h1 #{userProfile.username}
         .badge-holder
             if (admin)
