Fix prefix styling

--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -6,9 +6,13 @@ body
         if (bot.nsfw)
             #img-holder
                 img#bot-icon.nsfw(width='180px' height='180px' src=bot.logo)
+                #botprefix
+                    code.prefix #{bot.prefix}
         else
             #img-holder
                 img#bot-icon(width='180px' height='180px' src=bot.logo)
+                #botprefix
+                    code.prefix #{bot.prefix}
         h2.right(style='display: inline;') #{bot.username}
         if (servers)
             .right.servers #{`${servers} servers`}
@@ -34,8 +38,6 @@ body
             a.bot-btns.button(target='_blank' href=bot.invite ? bot.invite : `https://discord.com/oauth2/authorize?client_id=${bot.botid}&scope=bot&permissions=0`)
                 | Invite
             a.bot-btns.button(target='_blank' href=`/api/embed/${bot.botid}`) Embed
-        #prefix
-            code.prefix #{bot.prefix}
         #long
             span.isURL(class=isURL ? '' : 'markdown-body ') !{desc}
         #edit.linkx(style='display: none;')
