--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -1,6 +1,7 @@
 doctype html
 include includes/head.pug
 script(src='/assets/js/form.js')
+script(src="https://www.google.com/recaptcha/api.js" async defer)
 body(onload="load()")
     include includes/nav.pug
     #content
@@ -37,6 +38,7 @@ body(onload="load()")
             input#owners.input.xinput(type='text' placeholder=' ' value=String(bot.owners.slice(1).join(" ")) disabled)
             .placeholder Only the primary owner can edit additional owners
         br
+        .center-inline.g-recaptcha(data-callback='grecaptcha' data-sitekey=site_key data-theme=theme)
         a.button(onclick='submit()') Submit
         br
       hr
