--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -33,6 +33,7 @@ body
                 input#owners.input.xinput(type='text' placeholder=' ')
                 .placeholder Additional Owner IDs
             br
+            .center-inline.g-recaptcha(data-callback='grecaptcha' data-sitekey=site_key data-theme=theme)
             a.button(onclick='submit()') Submit
             br
         br
